newsletter tests pass

--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
@@ -15,7 +15,7 @@
 	<div class="tab_content newsletter" >
 			<div class="page_top_hook">All the latest news, and a couple great recipes.</div>
 
-			<span class="the_good_times">The Good Times</span> is our monthly newsletter with all the latest news in the nonprofit community, features in GoodCloud, often, an amazing recipe. Sign up to recieve it below!
+			<span class="the_good_times">The Good Times</span> is our monthly newsletter with all the latest news in the nonprofit community, features in GoodCloud, and often, an amazing recipe. Sign up to recieve it below!
 			
 
 			<div class="feature">
@@ -46,7 +46,7 @@
 			<div class="feature">
 				<div class="title">Read back issues of <span class="the_good_times">The Good Times</span></div>
 			
-				<a href="{% url marketing_site:newsletter_issue 2011 7 %}" class="issue">
+				<a href="{% url marketing_site:newsletter_issue 2011 7 %}" class="issue issue_2011_07">
 					<div class="cover_image"><img src="{% media_url "images/newsletters/2011-08/burger-crop.jpg"%}" /></div> 
 					<div class="title_and_date">
 						<span class="date">July 2011</span>
