--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter/2011_07.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter/2011_07.html
@@ -16,7 +16,7 @@
 		<p>Earlier this month, the Meyer Foundation and CompassPoint released a study showing that two-thirds of the nonprofit Executive Directors they surveyed were planning on leaving their current job within five years.  Among the reasons that leaders cited for leaving were financial problems, under-performing boards, and a burdensome time commitment.  </p>
 		
 		<p>Those reasons aren't exactly eye-opening revelations for most that have experience in the nonprofit world.  Still, that 67% number is significant.  Turnover is a major issue that all organizations have to overcome, but its effect seems to be amplified for nonprofits, especially those with small staff size and limited resources.</p>
-		<a href="#">Read the full article</a>
+		<a href="http://goodcloud.posterous.com/dont-let-your-knowledge-leave-because-of-nonp" target="_blank">Read the full article</a>
 		</div>
 	</div>
 	<div class="newsletter_columns">
@@ -49,7 +49,7 @@
 		<img class="article_teaser_image" src="{% media_url "images/newsletters/2011-07/burger-50.png" %}" />
 			<p>Bar-b-qued burgers are a staple of summer, even for vegetarians. Tom (carnivore) and Steven (vegetarian) take on the best burger recipe for summer, and the results may surprise you!.</p>
 
-			<p>In this inaugural edition of the <span class="the_good_times">The Good Times</span>, Tom and I put our best recipes to each other's tastebuds for the test! Who comes out the winner?
+			<p>In this inaugural edition of the <span class="the_good_times">The Good Times</span>, Tom and Steven put their best recipes to each other's tastebuds for the test - with a twist!  They trade recipes, cook each other's dish, subsituting meat/veggies as needed - it's a cuisine showdown for summer! Find out who wins!</p>
 
 			<a href="#">Read the full article</a>
 		</div>
@@ -59,9 +59,14 @@
 		<div class="article_teaser">
 			<img class="article_teaser_image" src="{% media_url "images/newsletters/2011-07/news-50.png" %}" />
 			<p>Since we serve exclusively nonprofits, we've got a great pulse on what's happening around the community.  Here's the latest!</p>
-
-			<p>Tom content here</p>
-			<a href="#">Read the full article</a>
+				<ul>
+				<li>The Minnesota government shutdown, and how it's wreaking havoc on nonprofits there.</li>
+				<li>The Social Media for Nonprofits conference series launch in San Francisco, and upcoming events</li>
+				<li>Seattle Foundation's "GiveBig" - and $3.5 million in donations - in 17 hours!</li>
+				<li>Trends in the $290 billion Americans gave to nonprofits in 2010</li>
+				<li>Even more!</li>
+				</ul>
+				<a href="http://goodcloud.posterous.com/nonprofit-news-round-up-july-2011">Read the full article</a>
 		</div>
 	</div>	
 	</div>
