added note about the video being out of date

--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -19,6 +19,8 @@
 			{# <iframe class="video_box" width="640" height="390" src="https://www.youtube.com/embed/PvTsZfx2zZs?rel=0" frameborder="0" allowfullscreen></iframe> #}
 			{# <img src="{% media_url "images/video-coming-soon.png" %}"/> #}
 			</div>
+			<p><b>Update:</b> GoodCloud has brand-new look since we recorded this video - check out the screenshots to see it! </p>
+
 			<p>Watch the video above to see a quick interview with one of our co-founders, and a look around GoodCloud.</p>
 
 			<p>In the tour video, we'll go through people, addresses, donations, volunteer shifts, tags, and groups - in under three minutes! Whew!  Of course if you've got more questions, you can always <a href="{% url marketing_site:contact_us %}">get in touch with us directly</a>!</p>
