--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -19,60 +19,55 @@
 				<li><a href="#ready_to_go" class="overview_tab ready_to_go"><div class="name">Ready to Go Today.</div></a></li>
 			</ul>
 			</div>
-			<div class="person_detail" id="overview">
-				<div class="name_and_role">
-					<div class="name">John</div>
-					<div class="role">Financial Advisor</div>
-				</div>
+			<div class="tab_detail" id="overview">
+				<div class="tab_icon"></div>
 				<div class="details">
 					<ul>
-						<li>Overview</li>
+
+						GoodCloud makes running a small nonprofit easier.
+
+We handle keeping track of your:
+- contacts
+- donations
+- volunteers.
+
+Better, we let you organize things in the way that fits your mission. Check it out!
 					</ul>
 				</div>
 			</div>
-			<div class="person_detail" id="built_for">
+			<div class="tab_detail" id="built_for">
 				<div class="name_and_role">
 					<div class="name">Cindy</div>
 					<div class="role">Photographer</div>
 				</div>
 				<div class="details">
-					<ul>
-						<li>Cindy has been trained to work with youth and seniors.</li>
-						<li>She’s a part of the first Tuesdays volunteer group.</li>
-						<li>She’s donated once per year for the last four years.</li>
-						<li>She’s available Tuesdays, Thursdays, and Sundays.</li>
-						<li>She turns 50 on September 28th.</li>
-					</ul>
+Built for Small Nonprofits
+GoodCloud was built in collaboration with small nonprofits, so it does the things you actually want.
 				</div>
 			</div>
-			<div class="person_detail" id="we_love">
+			<div class="tab_detail" id="we_love">
 				<div class="name_and_role">
 					<div class="name">Will</div>
 					<div class="role">Waiter</div>
 				</div>
 				<div class="details">
 					<ul>
-						<li>Will has been involved with our organization for two years.</li>
-						<li>He participated in the Spring 2011 and Fall 2011 sessions.</li>
-						<li>Will has been a group leader.</li>
-						<li>Will is interested in the Spring 2012 session.</li>
-						<li>Will made a $30 donation after the Spring 2011 session.</li>
+We ♥ nonprofits.
+We've been staff, volunteers, and donors. We care deeply about your mission, and we're here to help you flourish.
+
 					</ul>
 				</div>
 			</div>
-			<div class="person_detail" id="ready_to_go">
+			<div class="tab_detail" id="ready_to_go">
 				<div class="name_and_role">
 					<div class="name">Will</div>
 					<div class="role">Waiter</div>
 				</div>
 				<div class="details">
-					<ul>
-						<li>Will has been involved with our organization for two years.</li>
-						<li>He participated in the Spring 2011 and Fall 2011 sessions.</li>
-						<li>Will has been a group leader.</li>
-						<li>Will is interested in the Spring 2012 session.</li>
-						<li>Will made a $30 donation after the Spring 2011 session.</li>
-					</ul>
+Ready to Go Today
+Sign up for a free trial account in less than 60 seconds. No strings, no hassle, no credit card.
+- It's a monthly service with no contracts.
+- The first month is free.
 				</div>
 			</div>			
 		</div>
