updated link to herbivore vs carnivore.  ready to stage!

--- a/mycelium/apps/email_list/templates/email_list/blog_posterous.html
+++ b/mycelium/apps/email_list/templates/email_list/blog_posterous.html
@@ -599,6 +599,9 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
 .posterous_tweet_button, .posterous_fb_like_widget { float: left; display: inline; margin-right: 15px; }
 
 .p_responses { margin-top: 15px; }
+.wide_45 {
+	width: 45%;
+}
 </style>
 </head>
 
@@ -609,7 +612,7 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
     <a id="logo" href="https://www.agoodcloud.com/" class="png_bg">
         
     </a>
-    <div id="main_nav"><a href='https://www.agoodcloud.com/about-us' class=' ' >Our Mission</a><a href='https://www.agoodcloud.com/features' class=' ' >Features</a><a href='https://www.agoodcloud.com/tour' class=' ' >Tour</a><a href='https://www.agoodcloud.com/pricing' >Pricing</a><a href='https://www.agoodcloud.com/blog/'  class='current ' >Blog</a><a href='https://www.agoodcloud.com/signup' class=' ' >Sign Up</a></div>
+    <div id="main_nav"><a href='https://www.agoodcloud.com/about-us' class=' ' >Our Mission</a><a href='https://www.agoodcloud.com/features' class=' ' >Features</a><a href='https://www.agoodcloud.com/tour' class=' ' >Tour</a><a href='https://www.agoodcloud.com/pricing' >Pricing</a><a href='https://www.agoodcloud.com/newsletter'  class='current ' >News</a><a href='https://www.agoodcloud.com/signup' class=' ' >Sign Up</a></div>
 </div>
 
 <div id="wrap">
@@ -896,7 +899,7 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
     <div class="clear"></div>
 </div><!-- /.container -->
 
-
+</di
 
     
 
@@ -913,10 +916,10 @@ ul.navigation li a.current { color: #444; font-weight: bold; }
         <td>
             <a href="https://www.agoodcloud.com/features" class="top_link" >Features</a>
             <a href="https://www.agoodcloud.com/features#everything_in_one_place">Full CRM for Nonprofits</a>
-            <a href="https://www.agoodcloud.com/features#know_every_person">Know every person</a>
+            <a href="https://www.agoodcloud.com/features#know_your_people">Know every person</a>
             <a href="https://www.agoodcloud.com/features#save_money">Save your money</a>
-            <a href="https://www.agoodcloud.com/features#save_time">Save your time</a>
-            <a href="https://www.agoodcloud.com/features#gets_younger">Cloud-based</a>
+            <a href="https://www.agoodcloud.com/features#less_computer_time">Save your time</a>
+            <a href="https://www.agoodcloud.com/features#keeps_improving">Cloud-based</a>
             <a href="https://www.agoodcloud.com/features#secure">Secure</a>
         </td>
         <td>
