--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter/2011_07.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter/2011_07.html
@@ -51,7 +51,7 @@
 
 			<p>In this inaugural edition of the <span class="the_good_times">The Good Times</span>, Tom and Steven put their best recipes to each other's tastebuds for the test - with a twist!  They trade recipes, cook each other's dish, subsituting meat/veggies as needed - it's a cuisine showdown for summer! Find out who wins!</p>
 
-			<a href="#">Read the full article</a>
+			<a href="http://goodcloud.posterous.com/herbivore-vs-carnivore-our-july-recipe-showdo" target="_blank">Read the full article</a>
 		</div>
 
 
