--- a/mycelium/apps/accounts/templates/accounts/manage_account.html
+++ b/mycelium/apps/accounts/templates/accounts/manage_account.html
@@ -30,16 +30,16 @@
 </form_field>
 
 <form_field>
-<label>Status:</label>{{request.account.get_status_display}}
+<label>Status:</label> {{request.account.get_status_display}}
+</form_field>
+
+<form_field>
+<label>Signup Date:</label> {{request.account.signup_date|date}}
 </form_field>
 
 {% if request.account.has_subscription %}
 <form_field>
-<label>Signup Date:</label>{{request.account.signup_date|date}}
-</form_field>
-
-<form_field>
-<label>Billing Information:</label>Automatic billing to &bull;&bull;&bull;&bull; &bull;&bull;&bull;&bull; &bull;&bull;&bull;&bull; {{request.account.chargify_last_four}} <a href="{{request.account.chargify_manage_url}}" target="_blank">Modify Billing Information</a>
+<label>Billing Information:</label>XXXX XXXX XXXX {{request.account.chargify_last_four}} <a href="{{request.account.chargify_manage_url}}" class="billing_popup_link">Modify Billing Information</a>
 </form_field>
 
 <form_field>
@@ -63,7 +63,7 @@
 	{% if request.account.cancelled_subscription %}
 	<a href="{% url accounts:reactivate_subscription %}" >Reactivate Subscription</a>
 	{% else %}
-	<a href="{{request.account.chargify_signup_url}}&email={{request.useraccount.user.email|urlencode}}&first_name={{request.useraccount.user.first_name}}" target="_blank">Enter Billing Information</a>
+	<a href="{{request.account.chargify_signup_url}}&email={{request.useraccount.user.email|urlencode}}&first_name={{request.useraccount.user.first_name}}" class="billing_popup_link">Enter Billing Information</a>
 	{% endif %}
 </form_field>
  {% endif %}
