--- a/media/css/manage_accounts.css
+++ b/media/css/manage_accounts.css
@@ -169,3 +169,11 @@ tabbed_box box_content {
 #cboxContent {
 	/*background-color: #E6E6E6;*/
 }
+.expired_message {
+	color: red;
+	padding: 10px;
+	width: 80%;
+	
+	border-radius: 4px;
+	-moz-border-radius: 4px;	
+}
