--- a/mycelium/apps/accounts/templates/accounts/manage_account.html
+++ b/mycelium/apps/accounts/templates/accounts/manage_account.html
@@ -1,6 +1,6 @@
 {% extends "mycelium_base.html" %}
 {% load i18n i18n generic_fields friendly_data_formatting generic_tag_tags %}
-{% block title %}More Tools - Data Import, Account Settings, and more{% endblock %}
+{% block title %}GoodCloud Account Information{% endblock %}
 {% block css %}{{block.super}}
 {% generic_field_css %}
 
@@ -14,7 +14,7 @@
 {% block breadcrumb_links %}<a href="{% url core:more_menu %}" >Back to Admin</a>{% endblock %}
 
 {% block page_content %}
-<page_title>Account Information</page_title>
+<page_title>GoodCloud Account Information</page_title>
 
 <form action="{% url accounts:save_account_info %}" class="edit_mode_off account_info_form" id="basic_info_form"  method="POST">{% csrf_token %}
 {% with "Edit Account" as edit_label %}
@@ -33,7 +33,7 @@
 	Your account has been cancelled. To keep using GoodCloud, you'll need to reactivate your subscription below. Thanks!
 	{% endif %}{% endif %}{% endif %}
 	<br/>
-	- The GoodCloud Team
+	- Tom &amp; Steven (the GoodCloud team)
 	</div>
 {% endif %}
 
@@ -49,34 +49,36 @@
 </form_field>
 
 <form_field>
-<label>Status:</label> {{request.account.get_status_display}}
+<label>Account Status:</label> {{request.account.get_status_display}}
 </form_field>
 
-<form_field>
-<label>Signup Date:</label> {{request.account.signup_date|date}}
-</form_field>
 
 {% if request.account.has_subscription %}
 <form_field>
-<label>Billing Information:</label>XXXX-XXXX-XXXX-{{request.account.chargify_last_four}} <a href="{{request.account.chargify_manage_url}}" class="billing_popup_link">Change Billing Information</a>
+<label>Subscriber since:</label> {{request.account.chargify_activated_at|date}}
 </form_field>
-
 <form_field>
-<label>Subscription:</label>
-	Subscriber since: {{request.account.chargify_activated_at|date}}<br/>
-	Last billing date: {{request.account.last_billing_date|date}}<br/>
-	{% if request.account.chargify_cancel_at_end_of_period %}
-	Account cancelled, paid and active until {{request.account.chargify_next_assessment_at|date}}
-	{% else %}
-	Next billing date: {{request.account.chargify_next_assessment_at|date}}<br/>
-	{% endif %}
-
+<label>Last billing date:</label> {{request.account.last_billing_date|date}}
+</form_field>
+<form_field>
+{% if request.account.chargify_cancel_at_end_of_period %}
+<label> </label>	Account cancelled, paid and active until {{request.account.chargify_next_assessment_at|date}}
+{% else %}
+<label>Next billing date:</label> {{request.account.chargify_next_assessment_at|date}}
+{% endif %}
+</form_field>
+<form_field>
+<label>Billing Information:</label>XXXX-XXXX-XXXX-{{request.account.chargify_last_four}} <a href="{{request.account.chargify_manage_url}}" class="billing_popup_link mycelium_btn mycelium_small_btn">Change Billing Information</a>
 </form_field>
 
 <form_field>
 <label>Cancel Subscription:</label><a href="{% url accounts:cancel_subscription %}" class="cancel_subscription_btn mycelium_small_btn mycelium_btn mycelium_grey">Cancel</a></form_field>
 	
 {% else %}
+<form_field>
+<label>Signup Date:</label> {{request.account.signup_date|date}}
+</form_field>
+
 <form_field>
 <label>Billing Information:</label>
 	{% if request.account.cancelled_subscription %}
