--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -27,7 +27,7 @@ var GLOBAL_SEARCH_URL = "{% url core:search_results %}";
 	</main_nav>
 	<div id="global_search_results"><fragment name="global_search_results" action="replace"></fragment></div>
 	<side_nav>
-		{% if not request.account.is_active %}
+		{% if request.account.is_expired %}
 			{% if request.useraccount.is_admin %}<a href="{% url accounts:manage_account %}" class="side_account_expired_link">{% endif %}
 			<div id="expired_side_bar">Account Expired</div>
 			{% if request.useraccount.is_admin %}</a>{% endif %}
