--- a/mycelium/apps/flight_control/templates/flight_control/home.html
+++ b/mycelium/apps/flight_control/templates/flight_control/home.html
@@ -1,5 +1,5 @@
 {% extends "flight_control/base.html" %}
-{% load i18n %}
+{% load i18n flip_clock %}
 {% block title %}Dashboard{% endblock %}
 {% block css %}{{block.super}}
 {% css "/css/contrib/1140/1140.css" %}
@@ -15,54 +15,20 @@
 <div class="container">
 	<div class="row">
 		<span class="active threecol">
-			<div class="analog_clock">
-				<div class="number three_digit">
-					<div class="flip bottom back"><span>002</span><span class="ap">Active</span></div>
-					<div class="flip top front hide"><span>002</span><span class="ap">Active</span></div>
-					<div class="flip top back"><span>002</span></div>
-				</div>
-			</div>
+			{% flip_clock 102 "Active" %}
 		</span>
 
 		<span class="billing twocol">
-			<div class="analog_clock">
-				<div class="number bad">
-					<div class="flip bottom back"><span>02</span><span class="ap">Bill Issue</span></div>
-					<div class="flip top front hide"><span>02</span><span class="ap">Bill Issue</span></div>
-					<div class="flip top back"><span>02</span></div>
-				</div>
-			</div>
+			<span class="bad">
+				{% flip_clock 2 "Bill Issue"  %}
+			</span>
 		</span>
 
 		<span class="free_trial sevencol">
-			<div class="analog_clock">
-				<div class="number">
-					<div class="flip bottom back"><span>02</span><span class="ap">Trial Week 1</span></div>
-					<div class="flip top front hide"><span>02</span><span class="ap">Trial Week 1</span></div>
-					<div class="flip top back"><span>02</span></div>
-				</div>
-			</div>
-			<div class="analog_clock">
-				<div class="number">
-					<div class="flip bottom back"><span>02</span><span class="ap">Trial Week 2</span></div>
-					<div class="flip top front hide"><span>02</span><span class="ap">Trial Week 2</span></div>
-					<div class="flip top back"><span>02</span></div>
-				</div>
-			</div>
-			<div class="analog_clock">
-				<div class="number">
-					<div class="flip bottom back"><span>02</span><span class="ap">Trial Week 3</span></div>
-					<div class="flip top front hide"><span>02</span><span class="ap">Trial Week 3</span></div>
-					<div class="flip top back"><span>02</span></div>
-				</div>
-			</div>
-			<div class="analog_clock">
-				<div class="number">
-					<div class="flip bottom back"><span>02</span><span class="ap">Trial Week 4</span></div>
-					<div class="flip top front hide"><span>02</span><span class="ap">Trial Week 4</span></div>
-					<div class="flip top back"><span>02</span></div>
-				</div>
-			</div>
+			{% flip_clock 2 "Trial Week 1"  %}
+			{% flip_clock 7 "Trial Week 2"  %}
+			{% flip_clock 32 "Trial Week 3"  %}
+			{% flip_clock 12 "Trial Week 4"  %}
 		</span>
 	</div>
 </div>
@@ -71,9 +37,25 @@
 	<div class="row">
 		<column class="fourcol billing_issues">
 			<column_header>Billing Issues</column_header>
+			<div class="account_info_block">
+				<a href="#">Account Name</a> is past due.
+			</div>
+			<div class="account_info_block">
+				<a href="#">Another Account Name</a> is past due.
+			</div>
 		</column>
 		<column class="fourcol recent_activity">
 			<column_header>Recent Activity</column_header>
+			<div class="activity_block">
+				Steven Skoczen with <a href="#">Account Name</a> edited a person. <span class="when">15 minutes ago</span>
+			</div>
+			<div class="activity_block">
+				Steven Skoczen with <a href="#">Account Name</a> created a group. <span class="when">22 minutes ago</span>
+			</div>
+			<div class="activity_block">
+				Tom Noble with <a href="#">Account Name</a> imported a spreadsheet. <span class="when">47 minutes ago</span>
+			</div>
+
 		</column>
 		<column class="fourcol averages">
 			<column_header>Averages</column_header>
