basic numbers on the dashboard page work

--- a/mycelium/apps/flight_control/templates/flight_control/account.html
+++ b/mycelium/apps/flight_control/templates/flight_control/account.html
@@ -46,7 +46,20 @@
 
 		</column>
 		<column class="fourcol averages">
-			<column_header>Numbers</column_header>
+			<column_header>Billing</column_header>
+			<div class="info_block">
+				Signup Date: 
+			</div>
+			<div class="info_block">
+				Last Billed: 
+			</div>
+			<div class="info_block">
+				Next Billed: 
+			</div>
+			<div class="info_block">
+				Account Balance: 
+			</div>
+			<column_header>By the Numbers</column_header>
 
 			<average>
 				<number>52</number>
